welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:3: error: ')' expected but 'else' found.
  else return(c>b && b>a)} 
  ^